kubernetes/apps/default/misc-ingress/app/ingress-internal-ssl-unraid.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unraid
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/proxy-ssl-verify: 'off'
spec:
  ingressClassName: internal
  rules:
    - host: &host "unraid.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unraid
                port:
                  number: 443
  tls:
    - hosts:
        - *host
---
apiVersion: v1
kind: Endpoints
metadata:
  name: unraid
subsets:
  - addresses:
      - ip: "${SECRET_UNRAID_IP}"
    ports:
      - name: https
        port: 443
        protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: unraid
spec:
  ports:
    - name: https
      port: 443
  type: ClusterIP
